# CNVbenchmark_project

./: README.md  pyproject.toml  requirements.txt
cnv_benchmark/: __init__.py  dataloader.py  infercnv_eval.py
cnv_benchmark/_utility/: __init__.py  _classes.py  dataloader_utility.py  print_utility.py
cnv_benchmark/config/: dataloader.ini  dataloader.py
cnv_benchmark/inferMethods/: c_infercnvpy.py
cnv_benchmark/static/: quickstart.txt
cnv_benchmark/static/inferMethods/: c_infercnvpy.py
